test/error/test9.pl0
PROGRAM test9
VAR x,y;
BEGIN
   VAR z;
    z:=1;
    y:=2;
END